--- a/ReadMe
+++ b/ReadMe
@@ -5,7 +5,8 @@
 - Run dbcreate
 
 
-Jaadi :
+Jaadi : Any Ideas to make it nice .. you can work on it share.
+
   -- I want to add an extra colum for a  course description
   -- Then :  Create a tables for all class / session with live feedbacks.
   -- Data Analyses on feedback can be done anytime.
